--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'QuickWeather' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'QuickWeatherTests' do
     inherit! :search_paths
     # Pods for testing
